Fixed spacing in category bar, nav opening bug, some font sizing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,4 +7,24 @@
   color: white;
 }
 
+@keyframes shake {
+  0%, 100% { transform:translate(0, 0) }
+  10% { transform:translate(-1%, -1%) }
+  20% { transform:translate(-1%, 1%) }
+  30% { transform:translate(1%, -1%) }
+  40% { transform:translate(-1%, 1%) }
+  50% { transform:translate(-1%, 1%) }
+  60% { transform:translate(1%, 1%) }
+  70% { transform:translate(1%, -1%) }
+  80% { transform:translate(1%, 1%) }
+  90% { transform:translate(-1%, 1%) }
+}
 
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+.animate-shake {
+    animation: shake 5s infinite;
+}
